--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     font-weight: 900;
     position: relative;
     align-items: center;
+    justify-content: center;
     z-index: 3;
     height: 60px;
     border: 1px solid rgba(255, 255, 255, 0.027);
@@ -27,14 +28,16 @@ body {
     color: rgb(255, 255, 255);
 }
 
-#logo{
+#logo_container{
     margin-left: 15px;
+    /* height: 30px; */
     border: 2px solid rgb(255, 255, 255);
-    padding: 5px;
+    padding: 2px;
     border-radius: 40px;
     display: flex;
     box-sizing: border-box;
     position: absolute;
+    left: 5px;
     
 }
 h1{
@@ -46,16 +49,35 @@ h1{
 .menu{
     display: flex;
     height: 30px;
+    background: #be5050;
     justify-content: center;
     align-items: center;
     width: 30px;
-    border: 2px solid white;
+    /* border: 2px solid white; */
     border-radius: 50%;
     right:15px;
+    right: 5px;
     position: absolute;
     background-size: cover;
 }
 .menu:hover {
+    transform: scale(1.2);
+    color: yellow
+    /* border: 2px solid #fca311; */
+}
+.git_logo{
+    display: flex;
+    height: 30px;
+    /* justify-content: center;
+    align-items: center; */
+    width: 30px;
+    border: 2px solid white;
+    border-radius: 50%;
+    right:15px;
+    /* position: absolute; */
+    background-size: cover;
+}
+.git_logo:hover {
     border: 2px solid #fca311;
 }
 .txt_img_container{
