--- a/style.sync-conflict-20240504-205150-SD5OHNI.css
+++ b/style.sync-conflict-20240504-205150-SD5OHNI.css
@@ -78,9 +78,8 @@ h1{
     width: 22px;
     margin-left: 2px;
     border-radius: 50%;
-    /* display: flex; */
+    display: flex;
     align-items: center;
-    justify-content: center;
 
 }
 #notch_center:hover{
@@ -89,37 +88,13 @@ h1{
 }
 
 #eye{
-    margin: 10px 0px 0px 2px;
-    position: relative;
-    height: 5px;
-    width: 16px;
-    background: rgb(255, 255, 255);
-    bottom: 4px;
-    align-items: center;
-    justify-content:space-between;
     display: flex;
-}
-#eye_left, #eye_right{
-    padding: 0px 1px 0px 1px;
-    height: 4px;
-    width: 4px;
-    border-radius: 50%;
-    background: rgb(0, 0, 0);
-}
-#mouth{
-    height: 12px;
-    width:7px;
-    background: red;
     align-items: center;
-    margin: 0px 10px 0px 7px;
-    overflow: hidden;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    border-bottom: 1px solid yellow;
-    
-
+    justify-content: center;
+    height: 5px;
+    width: 18px;
+    background: rgb(255, 0, 0);
 }
-
 .txt_img_container{
     display: flex;
     /* border: 2px solid red; */
