--- a/style.css
+++ b/style.css
@@ -216,9 +216,24 @@ button:hover{
     color: white;
     margin: 25px 1px 10px 20px;
     padding: 3px;
+    font-family: 'Courier New';
+    line-height: 34px;
+}
+span{
+    color: red;
 }
 .main_text_body:hover{
     color: #fca311;
+}
+#projects_text{
+    color: white;
+    font-family: 'poppins';
+    margin-left: 10px;
+}
+#underline{
+    width: 95px;
+    height: 2px;
+    background: #ffffff;
 }
 footer{
   margin: 40px 0px 0px 0px;
@@ -238,24 +253,34 @@ footer{
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    background: rgb(77, 69, 69);
+    background: rgb(0, 0, 0);
+    margin: 20px 0px 0px 0px;
 }
 .box{
-    padding: 5px;
+    padding: 5px 0px 0px 0px;
     overflow: hidden;
-    background: white;
+    background: rgb(0, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
     height: 80%;
-    width: 70px;
-    border-radius: 5%;
+    width: 15%;
+    border-radius: 3px;
     margin: 0px 4px 0px 4px;
+    transition: transform 0.5s;
+}
+.box:hover{
+    transform: scale(1.1);
 }
 .box_content{
     display: flex;
 }
 .box_content_heading{
-    background: rgb(200, 200, 200);
-    margin: 0px 0px 3px 0px;
+    background: rgb(0, 0, 0);
+    margin: 0px 0px 3px 3px;
+    color: white;
+    font-family: 'poppins';
 }
 .box_content_body{
-    background: rgb(129, 223, 129);
+    color: white;
+    background: rgb(0, 0, 0);
+    margin: 0px 0px 0px 3px;
 }
