--- a/style.css
+++ b/style.css
@@ -276,11 +276,13 @@ footer{
 .box_content_heading{
     background: rgb(0, 0, 0);
     margin: 0px 0px 3px 3px;
-    color: white;
-    font-family: 'poppins';
+    color: rgb(26, 255, 0);
+    font-family: 'Courier new';
 }
 .box_content_body{
+    font-size: 12px;
     color: white;
     background: rgb(0, 0, 0);
     margin: 0px 0px 0px 3px;
+    font-family: 'poppins';
 }
